--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>FullStack</title>
-  </head>
-  <body>
-    <h1>hola</h1>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en" dir="ltr"><head><meta charset="utf-8"><title>FullStack Books</title><link href="css/bundle.css" rel="stylesheet"></head><body><script src="js/bundle.js"></script></body></html>
