--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>FullStack Books</title>
+    <!--Boostrap-->
+    <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css"/>
+    <!--Animate-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
   </head>
   <body>
-<!--hola-->
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/">Books app</a>
+      </div>
+    </nav>
+    
+    <div class="container p-4" id="app">
+      <div class="row">
+        <div class="col-md-4">
+
+          <form id="book-form" class="card card-body">
+            <div class="form-group">
+              <input type="text" id="title" class="form-control" placeholder="Book Title" autofocus>
+            </div>
+            <div class="form-group">
+              <input type="text" id="author" class="form-control" placeholder="Author">
+            </div>
+            <div class="form-group">
+              <input type="text" id="isbn" class="form-control" placeholder="ISBN">
+            </div>
+            <div class="input-group mb-3">
+                <div class="custom-file">
+                  <input type="file" class="custom-file-input" id="image" required>
+                  <label class="custom-file-label" for="image" aria-describedby="inputGroupFileAddon02">Choose Image</label>
+                </div>
+              </div>
+            <button type="Submit" class="btn btn-primary">
+              Save Book
+            </button>
+          </form>
+        </div>
+
+        <div class="col-md-8" id="books-cards">
+        </div>
+
+      </div>
   </body>
 </html>
